Add title in nav

--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genius Assign | Puppy Site</title>
+
+    <link rel="stylesheet" href="./css/utility.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body></body>
+  <body>
+    <nav class="nav">
+      <div class="nav__container container h-100">
+        <div class="nav__logo">
+          <span class="nav__title nav__title--black">PUPPY</span
+          ><span class="nav__title nav__title--orange">GRAM</span>
+        </div>
+        <div class="nav__search">
+          <input type="text" placeholder="Search" />
+        </div>
+        <div class="nav__group">Logo</div>
+      </div>
+    </nav>
+
+    <div class="container">Test responsive</div>
+
+    <script src="./js/app.js"></script>
+  </body>
 </html>
