Add logo in page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <nav class="nav">
       <div class="nav__container container h-100">
         <div class="nav__logo">
-          <span class="nav__title nav__title--black">PUPPY</span
-          ><span class="nav__title nav__title--orange">GRAM</span>
+          <span class="nav__title nav__title--black">PUPPY</span>
+          <span class="nav__title nav__title--orange">GRAM</span>
+          <img src="./assets/logo.png" alt="PuppyGram" />
         </div>
         <div class="nav__search">
           <input type="text" placeholder="Search" />
