--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genius Assign | Puppy Site</title>
 
-    <link rel="stylesheet" href="./css/utility.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/utility.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
   </head>
 
   <body>
@@ -18,7 +19,8 @@
           <img src="./assets/logo.png" alt="PuppyGram" />
         </div>
         <div class="nav__search">
-          <input type="text" placeholder="Search" />
+          <input class="nav__input w-100 h-100" type="text" />
+          <span class="nav__placeholder">Search</span>
         </div>
         <div class="nav__group">Logo</div>
       </div>
