Add search icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Genius Assign | Puppy Site</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/puppygram.css" />
     <link rel="stylesheet" href="./css/utility.css" />
     <link rel="stylesheet" href="./css/nav.css" />
   </head>
@@ -16,11 +17,14 @@
         <div class="nav__logo">
           <span class="nav__title nav__title--black">PUPPY</span>
           <span class="nav__title nav__title--orange">GRAM</span>
-          <img src="./assets/logo.png" alt="PuppyGram" />
+          <img src="./assets/images/logo.png" alt="PuppyGram" />
         </div>
         <div class="nav__search">
           <input class="nav__input w-100 h-100" type="text" />
-          <span class="nav__placeholder">Search</span>
+          <span class="nav__placeholder">
+            <span class="icon-search"></span>
+            <span>Search</span>
+          </span>
         </div>
         <div class="nav__group">Logo</div>
       </div>
