--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <span>Search</span>
           </span>
         </div>
-        <div class="nav__group">Logo</div>
+        <div class="nav__group">
+          <button class="btn">Upload</button>
+          <span class="icon-bell"></span>
+          <span class="nav__avatar">MB</span>
+        </div>
       </div>
     </nav>
 
