--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/puppygram.css" />
     <link rel="stylesheet" href="./css/utility.css" />
     <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
@@ -34,7 +35,11 @@
       </div>
     </nav>
 
-    <div class="container">Test responsive</div>
+    <main class="main">
+      <div class="container">Test responsive</div>
+    </main>
+
+    <footer class="footer">Footer</footer>
 
     <script src="./js/app.js"></script>
   </body>
