--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav__logo">
           <span class="nav__title nav__title--black">PUPPY</span>
           <span class="nav__title nav__title--orange">GRAM</span>
-          <img src="./assets/images/logo.png" alt="PuppyGram" />
+          <img src="./assets/images/logo-colour.png" alt="PuppyGram" />
         </div>
         <div class="nav__search">
           <input class="nav__input w-100 h-100" type="text" />
