Complete grid layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <nav class="nav">
-      <div class="nav__container container h-100">
+      <div class="nav__container container">
         <div class="nav__logo">
           <span class="nav__title nav__title--black">PUPPY</span>
           <span class="nav__title nav__title--orange">GRAM</span>
@@ -35,8 +35,29 @@
       </div>
     </nav>
 
-    <main class="main">
-      <div class="container">Test responsive</div>
+    <main class="main container">
+      <h2 class="main__title">Trending Now</h2>
+
+      <div class="grid">
+        <div class="grid__item">
+          <img src="./assets/images/dog-1.jpg" alt="Dog 1" />
+        </div>
+        <div class="grid__item">
+          <img src="./assets/images/dog-2.jpg" alt="Dog 2" />
+        </div>
+        <div class="grid__item">
+          <img src="./assets/images/dog-3.jpg" alt="Dog 3" />
+        </div>
+        <div class="grid__item">
+          <img src="./assets/images/dog-1.jpg" alt="Dog 4" />
+        </div>
+        <div class="grid__item">
+          <img src="./assets/images/dog-2.jpg" alt="Dog 5" />
+        </div>
+        <div class="grid__item">
+          <img src="./assets/images/dog-3.jpg" alt="Dog 6" />
+        </div>
+      </div>
     </main>
 
     <footer class="footer">Footer</footer>
