REplace flexbox by grid

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <div class="grid">
         <div class="grid__item">
           <img src="./assets/images/dog-1.jpg" alt="Dog 1" />
+          <div class="grid__overlay">
+            <span class="icon-cross"></span>
+          </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-2.jpg" alt="Dog 2" />
