--- a/index.html
+++ b/index.html
@@ -42,23 +42,38 @@
         <div class="grid__item">
           <img src="./assets/images/dog-1.jpg" alt="Dog 1" />
           <div class="grid__overlay">
-            <span class="icon-cross"></span>
+            <span class="icon-close-round"></span>
           </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-2.jpg" alt="Dog 2" />
+          <div class="grid__overlay">
+            <span class="icon-close-round"></span>
+          </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-3.jpg" alt="Dog 3" />
+          <div class="grid__overlay">
+            <span class="icon-close-round"></span>
+          </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-1.jpg" alt="Dog 4" />
+          <div class="grid__overlay">
+            <span class="icon-close-round"></span>
+          </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-2.jpg" alt="Dog 5" />
+          <div class="grid__overlay">
+            <span class="icon-close-round"></span>
+          </div>
         </div>
         <div class="grid__item">
           <img src="./assets/images/dog-3.jpg" alt="Dog 6" />
+          <div class="grid__overlay">
+            <span class="icon-close-round"></span>
+          </div>
         </div>
       </div>
     </main>
