--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <footer class="footer">Footer</footer>
 
+    <script src="./js/utils.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
