--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <!-- Navbar -->
     <nav class="nav">
       <div class="nav__container container">
         <div class="nav__logo">
@@ -38,6 +39,7 @@
       </div>
     </nav>
 
+    <!-- Main Content -->
     <main class="main container">
       <h2 class="main__title">Trending Now</h2>
 
@@ -55,6 +57,7 @@
       </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">Footer</footer>
 
     <!-- Delete Confirmation Modal -->
