Upload and preview file

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <label for="title" class="form__label">Title</label>
             <input
               type="text"
+              name="title"
               class="form__input"
               placeholder="What breed is your dog"
               required
@@ -109,6 +110,7 @@
             <label for="userId" class="form__label">Secret User ID</label>
             <input
               type="number"
+              name="userId"
               class="form__input"
               step="1"
               min="1000"
