Upload and preview image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <h3 class="upload__title">Upload your dog's photo</h3>
 
-        <form action="#" class="form" onsubmit="console.log('submit')">
+        <form action="#" class="form">
           <div class="form__control">
             <label for="image" class="form__label">Upload a photo</label>
             <input id="img-input" type="file" accept="image/*" hidden />
