--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/confirmation.css" />
     <link rel="stylesheet" href="./css/upload.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
 
   <body>
@@ -58,7 +59,22 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">Footer</footer>
+    <footer class="footer container">
+      <ul class="footer__nav">
+        <li class="footer__nav-item">About Us</li>
+        <li class="footer__nav-item">Blog</li>
+        <li class="footer__nav-item">Contact Us</li>
+        <li class="footer__nav-item">FAQ</li>
+      </ul>
+
+      <ul class="footer__info">
+        <li class="footer__info-item">
+          <span class="footer__title">PUPPYGRAM</span>
+          <img src="./assets/images/logo-fill.png" alt="PuppyGram" />
+        </li>
+        <li class="footer__info-item">Copyright 2020 - Puppygram Inc.</li>
+      </ul>
+    </footer>
 
     <!-- Delete Confirmation Modal -->
     <div id="confirmation" class="modal">
