Complete main bottom part

--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
           <div class="grid__modal">Expand</div>
         </div> -->
       </div>
+
+      <div class="main__load-more">
+        <span class="icon-plus-round"></span>
+        Load More
+      </div>
+
+      <div class="main__selector">
+        <label for="feed-type" class="main__label">Showing</label>
+        <select name="feed-type" class="main__select">
+          <option value="trending">Trending</option>
+          <option value="recent">Recent</option>
+          <option value="relevant">Relevant</option>
+        </select>
+      </div>
     </main>
 
     <!-- Footer -->
