Working image modal

--- a/index.html
+++ b/index.html
@@ -44,18 +44,7 @@
     <main class="main container">
       <h2 class="main__title">Trending Now</h2>
 
-      <div id="grid" class="grid">
-        <!-- <div class="grid__item-container">
-          <div class="grid__item">
-            <img src="./assets/images/dog-1.jpg" alt="Dog 1" />
-            <div class="grid__overlay">
-              <span class="icon-close-round"></span>
-            </div>
-          </div>
-
-          <div class="grid__modal">Expand</div>
-        </div> -->
-      </div>
+      <div id="grid" class="grid"></div>
 
       <div class="main__load-more">
         <span class="icon-plus-round"></span>
