Show message modal

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="./css/modal.css" />
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/confirmation.css" />
-    <link rel="stylesheet" href="./css/upload.css" />
     <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/upload.css" />
+    <link rel="stylesheet" href="./css/message.css" />
+    <link rel="stylesheet" href="./css/confirmation.css" />
 
     <!-- Dexie -->
     <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
@@ -159,6 +160,14 @@
             Submit
           </button>
         </form>
+      </div>
+    </div>
+
+    <div id="messageModal" class="modal modal--message">
+      <div class="message">
+        <p></p>
+
+        <button class="btn btn--large">OK</button>
       </div>
     </div>
 
