--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </div>
     </nav>
 
+    <!-- To show message related to main  -->
     <div id="message" class="content-message">Loading</div>
 
     <!-- Main Content -->
@@ -163,6 +164,7 @@
       </div>
     </div>
 
+    <!-- Message modal -->
     <div id="messageModal" class="modal modal--message">
       <div class="message">
         <p></p>
